# osxclean

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
osxclean/: CMakeLists.txt  main.cpp
uninstaller/: CMakeLists.txt
uninstaller/include/: uninstaller.h  uninstaller.hpp
uninstaller/src/: app_uninstaller.cpp  app_uninstaller.hpp  pkg_uninstaller.cpp  pkg_uninstaller.hpp  plist.h  plist.mm  uninstaller_impl.cpp  uninstaller_impl.hpp
uninstaller/test/: CMakeLists.txt  app_uninstaller_tests.cpp  main.cpp  pkg_uninstaller_tests.cpp  plist_tests.cpp  uninstaller_base_tests.cpp
